deployment-k8s/sawtooth/multi-node/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: sawtooth-testnet
  annotations:
    kubernetes.io/ingress.class: nginx
    certmanager.k8s.io/issuer: letsencrypt-prod
    certmanager.k8s.io/acme-challenge-type: http01

spec:
  tls:
    - hosts:
        - testnet.hexchain.xyz
      secretName: k8s-stack-testnet-app-tls
  rules:
    - host: testnet.hexchain.xyz
      http:
        paths:
          - path: /
            backend:
              serviceName: sawtooth-0
              servicePort: 8008
